--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,6 +20,8 @@ jobs:
         cache: 'npm'
     - name: Install NPM dependencies
       run: npm install
+    - name: Start application
+      run: npm start &
     - name: Run the unit tests
       run: npm run test:unit
     - name: Display softuni username
